src/style/overrides/_phone.scss
@media only screen and (max-width: 512px) {
  .section-wrap {
    padding: 40px 0;
  }

  .container {
    padding: 0 16px;
  }

  .parallax-wrap {
    inset: 0 -10%;
  }

  .scene-content {
    strong {
      font-size: 1rem;
    }

    h2 {
      font-size: 4rem;
    }

    p {
      font-size: 1.2rem;
    }

    blockquote {
      p {
        font-size: 1.2rem;

        cite {
          &:before {
            font-size: 10rem;
            right: 10%;
          }

          a {
            font-size: 1.2rem;
          }
        }
      }
    }
  }

  #scene-landing {
    .img-wrap {
      img {
        width: 216px;
      }
    }

    strong {
      font-size: 1rem;
    }

    h2 {
      font-size: 4rem;
    }

    p {
      font-size: 1.6rem;
    }
  }

  #navigation {
    width: 90%;
  }

  #scene-users {
    .container {
      .img-wrap {
        img {
          width: 216px;
        }
      }

      .brand-grid .brand-item p {
        font-size: 1.3rem;
      }
    }
  }

  .scene-quote {
    padding: 32px 0;

    blockquote {
      padding: 20px;

      p {
        font-size: 1.2rem;
      }
    }
  }

  #scene-developers {
    .container {
      .scene-arrow {
        display: none;
      }

      .brand-grid {
        margin-top: 20px;

        &:not(:last-child) {
          margin-bottom: 20px;
        }
      }

      .img-wrap {
        img {
          width: 216px;
        }
      }
    }
  }

  #scene-news,
  #scene-picker {
    h2 {
      font-size: 4rem;
    }
  }

  .brand-grid {
    .brand-item {
      padding: 10px;

      p {
        font-size: 1.1rem;
      }

      & > div .icon-wrap img {
        max-height: 16px;
      }
    }
  }

  .faq-item {
    .faq-btn {
      font-size: 1.4rem;
    }
  }

  footer {
    .container {
      .logo-list {
        gap: 20px;

        img {
          height: 24px;
        }
      }
    }

    .footer-title {
      font-size: 1rem;
    }
  }

  .container {
    width: 100%;
    max-width: 100%;

    &.small {
      width: 100%;
      max-width: 100%;
      padding: 0 48px;
    }

    &.moderate {
      width: 100%;
      max-width: 100%;
      padding: 0 32px;
    }
  }
}

